--- a/client/index.html
+++ b/client/index.html
@@ -6,17 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voting System</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <script src="./js/main.js" defer></script>
 </head>
 
 <body>
     <div class="poll">
+        <div class="poll__title">Which do you prefer?</div>
         <div class="poll__option">
             <div class="poll__option-fill"></div>
             <div class="poll__option-info">
+                <span class="poll__label">TypeScript</span>
+                <span class="poll__percentage">10%</span>
+            </div>
+        </div>
+        <div class="poll__option poll__option--selected">
+            <div class="poll__option-fill"></div>
+            <div class="poll__option-info">
                 <span class="poll__label">JavaScript</span>
-                <span class="poll__percentage">24%</span>
+                <span class="poll__percentage">80%</span>
             </div>
         </div>
     </div>
